Data cart fixes
Wrap the file name in the data cart
Make the data cart icon clickable
Change the tool tip to - Add this file to Data cart
Change cart icon background to green on landing page
Add icons to buttons on data cart page
Reduce the font size on data cart
Make the downloaded icon and checkbox smaller
Change the button Remove selected and downloaded color to red
Scrollbar inside the table of data cart
Gray badge next to buttons to show how many are selected
Add data cart icon next to Data cart title

--- a/src/client/pdr/landing/filedetails.component.css
+++ b/src/client/pdr/landing/filedetails.component.css
@@ -44,3 +44,7 @@
 .filecard{
   padding: 0em;
 }
+
+:host /deep/ .faa-cart-plus:before {
+  color: green;
+}
